--- a/src/components/Country.css
+++ b/src/components/Country.css
@@ -13,3 +13,12 @@
     color:rgb(30, 70, 173)
 }
 
+.flag {
+    color: rgb(83, 187, 152);
+}
+.coatOfArms {
+    max-width: 75px;
+    color: rgb(53, 208, 157);
+}
+
+
